@@ -1,7 +1,7 @@
 plugins {
   id 'application'
   id 'com.adarshr.test-logger' version '3.2.0'
-  id 'org.openjfx.javafxplugin' version '0.0.12'
+  id 'org.openjfx.javafxplugin' version '0.0.13'
   id "org.beryx.jlink" version "2.25.0"
 //   id "org.javamodularity.moduleplugin" version "1.8.10"
   id "com.github.ben-manes.versions" version "0.42.0"
@@ -13,7 +13,7 @@ sourceCompatibility = 17
 targetCompatibility = 17
 
 repositories {
-    jcenter()
+    mavenLocal()
     mavenCentral()
     maven {
         name = "MBARI"
@@ -29,7 +29,7 @@ repositories {
 }
 
 javafx {
-    version = "18"
+    version = "18.0.1"
     modules = [ 
         'javafx.base',
         'javafx.controls',
@@ -46,7 +46,8 @@ def runtimeJvmArgs = [
         '--add-exports', 'javafx.base/com.sun.javafx.event=com.jfoenix',
         '--add-exports', 'javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix',
         '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=com.jfoenix',
-        '--add-exports', 'javafx.graphics/com.sun.javafx.stage=com.jfoenix'
+        '--add-exports', 'javafx.graphics/com.sun.javafx.stage=com.jfoenix',
+        '--add-reads', 'jsharktopoda.merged.module=org.slf4j',
 ]
 
 test {
@@ -58,21 +59,21 @@ test {
     }
 }
 
-def vcr4j = "4.4.1.jre11"
+def vcr4j = "5.0.0.jre17-SNAPSHOT"
 dependencies {
     implementation "com.jfoenix:jfoenix:9.0.10"
-    implementation "io.reactivex.rxjava2:rxjavafx:2.2.2"
-    implementation "org.kordamp.ikonli:ikonli-javafx:11.3.5"
-    implementation "org.kordamp.ikonli:ikonli-material-pack:11.3.5"
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation "org.kordamp.ikonli:ikonli-javafx:12.3.1"
+    implementation "org.kordamp.ikonli:ikonli-material-pack:12.3.1"
     implementation "org.mbari:mbarix4j:2.0.5.jre11"
     implementation "org.mbari.vcr4j:vcr4j-core:${vcr4j}"
-    implementation "org.mbari.vcr4j:vcr4j-sharktopoda:${vcr4j}"
+    implementation "org.mbari.vcr4j:vcr4j-remote:${vcr4j}"
     implementation "org.slf4j:slf4j-api:2.0.0-alpha7"
-    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha14')  {
+    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha16') {
         exclude group: 'javax.activation'
     }
     runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1'
-    runtimeOnly 'org.fusesource.jansi:jansi:1.18'
+    runtimeOnly 'org.fusesource.jansi:jansi:2.4.0'
     testImplementation 'junit:junit:4.13.2'
 }
 
